# Lang2RoboDemo

./: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: capture.py  iterate.py  recommend.py  simulate.py
backend/app/core/: claude.py  config.py  prompts.py
backend/app/models/: project.py
backend/app/services/: catalog.py  controllers.py  downloader.py  iteration.py  planner.py  project_status.py  reconstruction.py  scene.py  simulator.py  vision.py
backend/tests/: conftest.py  test_catalog.py  test_claude_client.py  test_config.py  test_downloader.py  test_iteration.py  test_models.py  test_planner.py  test_reconstruction.py  test_scene.py  test_simulator.py  test_vision.py
docs/: plan-simulation-quality.md
docs/simulation-quality/: DEVELOPMENT_PLAN.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: MetricsDashboard.tsx  SceneViewer3D.tsx
frontend/src/hooks/: useProjectState.ts
frontend/src/pages/: ProjectWorkflow.tsx
frontend/src/types/: index.ts
prompts/: iteration.md  recommendation.md  vision_analysis.md
scripts/: pre-commit
