[project]
name = "lang2robo"
version = "0.1.0"
description = "Text description → robotic cell simulation → iterative improvement"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "mujoco>=3.0",
    "pycolmap>=3.10",
    "robot-descriptions",
    "trimesh",
    "numpy",
    "pillow",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout",
    "ruff",
]
training = [
    "lerobot",
    "torch",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests requiring API keys",
]

[tool.ruff]
target-version = "py311"
line-length = 100
